# mini-front-end-llvm

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
src/: minimal_fe.cc  minimal_fe.cpp  minimal_fe.h
test/: ast_test.cc  lexer_test.cc  parser_test.cc
